deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - sonatype-nexus
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.235.1
        ports:
        - containerPort: 80
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 80
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        securityContext:
          runAsUser: 0    # root
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-volume
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      volumes:
      - name: jenkins-volume
        gcePersistentDisk:
          pdName: jenkins-volume
          fsType: ext4
