nexus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus
spec:
  type: NodePort
  selector:
    app: sonatype-nexus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001
