self-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self
  labels:
    app: self
spec:
  ports:
  - port: 49152
  selector:
    jenkins/mypod: "true"
