service.yaml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-ui
  spec:
    type: NodePort
    selector:
      app: jenkins
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 30000
        name: ui
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-discovery
  spec:
    selector:
      app: jenkins
    ports:
      - protocol: TCP
        port: 50000
        targetPort: 50000
        name: slaves
